Fix overlapping class

--- a/css/blocks/nav.css
+++ b/css/blocks/nav.css
@@ -11,7 +11,7 @@ nav {
     width: 95%;
 }
 
-nav ul, li {
+nav ul, nav li {
     text-decoration: none;
     list-style: none;
     gap: 40px;
